Create subclass dynamically

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,4 +5,25 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = []
+
+[project.optional-dependencies]
+dev = [
+    "pre-commit",
+    "flake8",
+    "mypy",
+    "pytest",
+]
+
+[tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.mypy]
+python_version = "3.13"
+warn_return_any = true
+warn_unused_configs = true
+mypy_path = "src"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
